<resources>
    <string name="app_name">TaskMaster</string>
    <string name="my_tasks">My Tasks</string>
    <string name="todo">TODO</string>
    <string name="add_task">ADD TASK</string>
    <string name="all_tasks">ALL TASKS</string>
    <string name="all_task">All Tasks</string>
    <string name="label">label</string>
    <string name="title">Task title</string>
    <string name="total_task">Total Task: 0</string>
    <string name="desc">Task Description</string>
    <string name="titleDetail">No Title</string>
    <string name="descDetail">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis
obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
nihil, eveniet aliquid culpa officia aut! Impedit sit sunt quaerat, odit,
tenetur error, harum nesciunt ipsum debitis quas aliquid. Reprehenderit,
quia. Quo neque error repudiandae fuga? Ipsa laudantium molestias eos
sapiente officiis modi at sunt excepturi expedita sint? Sed quibusdam</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="setting">Setting</string>
    <string name="first_title">First Task</string>
    <string name="second_title">Second Task</string>
    <string name="third_title">Third Task</string>
    <string name="user_s_task">User\'s Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="state">state</string>
    <string name="team">Team</string>
    <string name="user_s_team">User\'s Team</string>
    <string name="task_team_name">Task Team Name</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="attach_file">Attach File</string>
    <string name="no_location_provided">No Location Provided</string>


</resources>