<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Setting">


<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintWidth_percent="0.8"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            android:layout_marginTop="168dp"-->
<!--            android:hint="@string/name"-->
<!--            android:id="@+id/textInputLayout">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--                android:id="@+id/name"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:inputType="textPersonName" />-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->


    <com.google.android.material.button.MaterialButton
            android:visibility="gone"
            android:onClick="signOut"
            android:text="@string/log_out"
            android:textSize="20sp"
            android:layout_width="151dp"
            android:layout_height="54dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/saveButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.173"
            android:id="@+id/logOut" />

    <com.google.android.material.textfield.TextInputLayout

            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:inputType="none"
            app:layout_constraintWidth_percent="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.303"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/textInputLayout2"
            app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
                android:hint="@string/team"
                android:id="@+id/menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
            android:onClick="addName"
            android:text="@string/save"
            android:textSize="26sp"
            android:layout_width="151dp"
            android:layout_height="54dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.206"
            android:id="@+id/saveButton" />

    <com.google.android.material.button.MaterialButton
            android:visibility="gone"
            android:id="@+id/login"
            android:onClick="signIn"
            android:text="@string/log_in"
            android:textSize="26sp"
            android:layout_width="151dp"
            android:layout_height="54dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/saveButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.173" />

</androidx.constraintlayout.widget.ConstraintLayout>