<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddTask">

    <TextView
            android:id="@+id/textView3"
            android:layout_width="204dp"
            android:layout_height="51dp"
            android:layout_marginTop="68dp"
            android:text="@string/add_task"
            android:textAlignment="center"
            android:textColor="?colorOnSecondary"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.077"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/titleLabel"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.8"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:layout_marginStart="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.125"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView3"
            app:layout_constraintVertical_bias="0.163">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@id/title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.8"
            android:layout_marginStart="15dp"
            android:hint="@string/desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.125"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleLabel"
            app:layout_constraintVertical_bias="0.185">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/desc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:onClick="addTask"
            android:id="@+id/addingTask"
            android:layout_width="179dp"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:text="@string/add_task"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.036"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descLabel"
            app:layout_constraintVertical_bias="0.295" />

    <TextView
            android:id="@+id/totalTask"
            android:layout_width="133dp"
            android:layout_height="66dp"
            android:text="@string/total_task"
            android:textSize="18sp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.083"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addingTask"
            app:layout_constraintVertical_bias="0.462" />


</androidx.constraintlayout.widget.ConstraintLayout>