<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".TaskFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@color/cardview_dark_background"
            android:layout_width="match_parent"
            android:layout_height="135sp">

        <TextView
                android:id="@+id/titleFragment"
                android:textColor="?colorOnSecondary"
                android:gravity="center"
                android:textSize="22sp"
                android:text="@string/title"
                android:layout_width="150dp"
                android:layout_height="30dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="4dp"
                app:layout_constraintHorizontal_bias="0.498" />

        <TextView
                android:id="@+id/descFragment"
                android:textColor="?colorOnSecondary"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:text="@string/desc"
                android:layout_width="187dp"
                android:layout_height="54dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleFragment"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.411" />

        <TextView
                android:id="@+id/stateFragment"
                android:textColor="?colorOnSecondary"
                android:gravity="center"
                android:textSize="16sp"
                android:text="@string/state"
                android:layout_width="57dp"
                android:layout_height="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintHorizontal_bias="0.864"
                app:layout_constraintStart_toEndOf="@+id/descFragment"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.578"
                app:layout_constraintTop_toTopOf="parent" />

        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#FFFFFF"
                tools:layout_editor_absoluteX="0dp"
                app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>