<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/textView2"
            android:layout_width="213dp"
            android:layout_height="59dp"
            android:text="@string/my_tasks"
            android:textAlignment="center"
            android:textColor="?colorOnSecondary"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.136"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <Button
            android:onClick="showSetting"
            android:id="@+id/setting"
            android:layout_width="100dp"
            android:layout_height="62dp"
            android:text="@string/setting"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toEndOf="@+id/addTask"
            app:layout_constraintEnd_toStartOf="@+id/allTasks"
            app:layout_constraintTop_toBottomOf="@+id/mainTaskView" />

    <Button

            android:onClick="showAddTask"
            android:id="@+id/addTask"
            android:layout_width="100dp"
            android:layout_height="62dp"
            android:layout_marginStart="24dp"
            android:text="@string/add_task"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainTaskView" />


    <Button
            android:onClick="showAllTasks"
            android:id="@+id/allTasks"
            android:layout_width="100dp"
            android:layout_height="62dp"
            android:text="@string/all_tasks"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainTaskView"
            android:layout_marginEnd="36dp"
            app:layout_constraintVertical_bias="0.504" />

<!--    <TextView-->
<!--            android:textColor="#BCAAA4"-->
<!--            android:background="@color/cardview_dark_background"-->
<!--            android:onClick="showTask"-->
<!--            android:textSize="18sp"-->
<!--            android:gravity="center"-->
<!--            android:text="@string/first_title"-->
<!--            android:layout_width="120dp"-->
<!--            android:layout_height="50dp"-->
<!--            android:id="@+id/taskOne"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            android:layout_marginStart="16dp"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/taskRecyclerView"-->
<!--            android:layout_marginTop="76dp" />-->

<!--    <TextView-->
<!--            android:textColor="#BCAAA4"-->
<!--            android:background="@color/cardview_dark_background"-->
<!--            android:onClick="showTask"-->
<!--            android:textSize="18sp"-->
<!--            android:gravity="center"-->
<!--            android:text="@string/second_title"-->
<!--            android:layout_width="120dp"-->
<!--            android:layout_height="50dp"-->
<!--            android:id="@+id/taskTwo"-->
<!--            app:layout_constraintEnd_toStartOf="@+id/taskThree"-->
<!--            app:layout_constraintStart_toEndOf="@+id/taskOne"-->
<!--            app:layout_constraintHorizontal_bias="0.473"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/taskRecyclerView"-->
<!--            android:layout_marginTop="76dp" />-->

<!--    <TextView-->
<!--            android:textColor="#BCAAA4"-->
<!--            android:background="@color/cardview_dark_background"-->
<!--            android:onClick="showTask"-->
<!--            android:textSize="18sp"-->
<!--            android:gravity="center"-->
<!--            android:text="@string/third_title"-->
<!--            android:layout_width="120dp"-->
<!--            android:layout_height="50dp"-->
<!--            android:id="@+id/taskThree"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            android:layout_marginEnd="16dp"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/taskRecyclerView"-->
<!--            android:layout_marginTop="76dp" />-->

    <TextView
            android:textColor="?colorOnSecondary"
            android:text="@string/user_s_task"
            android:gravity="center"
            android:textSize="22sp"
            android:layout_width="240dp"
            android:layout_height="39dp"
            android:id="@+id/mainUsername"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginTop="36dp" />

    <androidx.recyclerview.widget.RecyclerView

            android:layout_width="350dp"
            android:layout_height="400sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainUsername"
            android:id="@+id/mainTaskView"
            android:layout_marginTop="44dp" />

</androidx.constraintlayout.widget.ConstraintLayout>